# NextTrack

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  locustfile.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
catalog/: consumers.py  context_processors.py  db_router.py  exceptions.py  external_data.py  forms.py  logging.py  metrics.py  middleware.py  models.py  pagination.py  routing.py  serializers.py  services.py  spotify_client.py  spotify_oauth.py  tasks.py  throttles.py  urls.py  urls_v1.py  views.py  views_web.py
catalog/migrations/: 0001_initial.py  0002_add_recommendation_feedback.py  0003_add_artist_origin_country.py  0004_add_external_data_fields.py  0005_add_is_audio_analyzed.py  0006_add_track_created_at.py  0007_increase_session_key_length.py  0008_session_key_textfield.py  0009_user_survey_and_analytics.py  0010_add_shared_playlist_and_album.py  0011_add_release_year_to_track.py  0012_add_denormalized_artist_fields.py  0013_add_precomputed_recommendation.py
catalog/templatetags/: catalog_extras.py
catalog/tests/: README.md  __init__.py  conftest.py  factories.py  test_integration.py  test_models.py  test_performance.py  test_services.py  test_views_api.py  test_views_web.py
next_track/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
next_track/settings/: __init__.py  base.py  development.py  production.py  testing.py
nginx/: nginx.conf
nginx/conf.d/: nexttrack.conf
pgbouncer/: pgbouncer.ini  userlist.txt
scripts/: deploy.sh  ssl-setup.sh
static/css/: components.css  shortcuts.css  style.css  tooltips.css  tour.css
static/js/: common.js  playlist-progress.js  recent-searches.js  shortcuts.js  tour.js  utils.js
templates/: 404.html  500.html
(+20 files in other folders)
